Voting server changes
